<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.project.ndondot.konversisuhu.MainActivity">

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/input_suhu"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/from"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_weight="1"
            android:id="@+id/input_suhu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/input_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="12dp"
            android:entries="@array/pil_suhu"/>
    </LinearLayout>

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/Konversi_ke"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/to">

        <TextView
            android:id="@+id/output_suhu"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/output_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="12dp"
            android:entries="@array/pil_suhu"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/output"
        android:text="@string/convert"
        android:background="@color/colorAccent"
        android:onClick="run"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:onClick="reset"
        android:background="@color/red"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/dev"/>
</RelativeLayout>
